# HT_8_Tra_LQR_PID

./: CMakeLists.txt  Readme.md  package.xml
include/: LQR.hpp  LQR_2.hpp  LQR_cpath.hpp  scout_define.hpp
launch/: ctrl.launch  ctrl_lqr.launch  ctrl_lqr_cpath.launch
src/: LQR.cpp  scout_ctrl.cpp  scout_ctrl_2_kinemic.cpp  scout_ctrl_2_kinemic_for_cpath.cpp  scout_ctrl_3_kinemic_LQR_v1v2.cpp
